# enforce-visibility

./: Cargo.toml  README.md
src/: lib.rs
trybuild/fail/: example.stderr  non-public-empty.rs  non-public-empty.stderr  public-with-non-public-fields.rs  public-with-non-public-fields.stderr  unsupported-attributes.rs  unsupported-attributes.stderr  unsupported-item.rs  unsupported-item.stderr
trybuild/pass/: public-empty.rs  public-with-fields.rs
