[package]
name = "xlint"
description = "Lightweight lints based on proc-macros."
version = "0.1.0"
edition = "2021"
license = "Apache 2.0 OR MIT"

[lib]
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }

[dev-dependencies]
trybuild = { version = "1.0.71", features = ["diff"] }
